# advent-of-code-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  justfile
.github/: pull_request_template.md
.github/workflows/: checks.yml  docs.yml  rust.yml  tests.yml
benches/: benchmark.rs
docs/: index.html
input/year2015/: day02.txt  day04.txt  day06.txt  day07.txt  day08.txt  day10.txt  day11.txt  day13.txt  day14.txt  day15.txt  day17.txt  day19.txt  day21.txt  day22.txt  day23.txt  day25.txt
input/year2016/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day14.txt  day16.txt  day17.txt  day18.txt  day19.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt
input/year2017/: day01.txt  day02.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt
input/year2019/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day20.txt  day21.txt  day23.txt  day24.txt  day25.txt
input/year2020/: day02.txt  day03.txt  day04.txt  day06.txt  day07.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt
input/year2021/: day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day13.txt  day14.txt  day15.txt  day17.txt  day18.txt  day19.txt  day20.txt  day21.txt  day22.txt  day24.txt  day25.txt
input/year2022/: day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day16.txt  day18.txt  day19.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt
input/year2023/: day01.txt  day02.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt
src/: lib.rs  main.rs
src/util/: ansi.rs  bitset.rs  chunk.rs  collection.rs  grid.rs  hash.rs  heap.rs  integer.rs  iter.rs  macros.rs  math.rs  md5.rs  numeric.rs  parse.rs  point.rs  scaffold.rs  slice.rs  thread.rs
src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2016/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2017/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2018/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2019/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  intcode.rs
src/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
tests/: integration_test.rs  test.rs
tests/year2015/: day01_test.rs  day02_test.rs  day03_test.rs  day04.rs  day04_test.rs  day05_test.rs  day06.rs  day07.rs  day08.rs  day08_test.rs  day09.rs  day10_test.rs  day11.rs  day12.rs  day13_test.rs  day14.rs  day15_test.rs  day17.rs  day23.rs  day24.rs
tests/year2016/: day01_test.rs  day02_test.rs  day03.rs  day04.rs  day06_test.rs  day07.rs  day09.rs  day11.rs  day11_test.rs  day12.rs  day14.rs  day15_test.rs  day16.rs  day17_test.rs  day19_test.rs  day20.rs  day21.rs  day21_test.rs  day24_test.rs
tests/year2017/: day01.rs  day02.rs  day03_test.rs  day04.rs  day05.rs  day07.rs  day08_test.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15_test.rs  day17.rs  day19.rs  day20.rs  day22_test.rs  day23_test.rs  day24.rs  day25_test.rs
tests/year2018/: day01_test.rs  day02.rs  day03_test.rs  day04.rs  day05.rs  day06_test.rs  day08.rs  (+14 more)
(+167 files in other folders)
