[package]
name = "aoc"
version = "2024.12.25"
edition = "2021"
rust-version = "1.83"

[features]
frivolity = []
simd = []

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "allow"
missing_debug_implementations = "allow"
missing_docs = "allow"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
non_local_definitions = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
tail_expr_drop_order = "allow"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "allow"
variant_size_differences = "warn"

[lints.clippy]
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
as_underscore = "warn"
assertions_on_result_states = "warn"
assigning_clones = "warn"
big_endian_bytes = "allow"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "allow"
cfg_not_test = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "allow"
default_trait_access = "warn"
default_union_representation = "warn"
deref_by_slicing = "allow"
disallowed_script_idents = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
else_if_without_else = "allow"
empty_drop = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "allow"
error_impl_error = "warn"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
exit = "warn"
expect_used = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_arithmetic = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
host_endian_bytes = "allow"
if_not_else = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
impl_trait_in_params = "warn"
implicit_clone = "warn"
implicit_hasher = "allow"
implicit_return = "allow"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
indexing_slicing = "allow"
inefficient_to_string = "warn"
infinite_loop = "warn"
inline_always = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
integer_division = "allow"
integer_division_remainder_used = "allow"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_over_hash_type = "allow"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_include_file = "warn"
large_stack_arrays = "allow"
large_types_passed_by_value = "warn"
let_underscore_must_use = "allow"
let_underscore_untyped = "warn"
linkedlist = "warn"
little_endian_bytes = "allow"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_c_str_literals = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
many_single_char_names = "allow"
map_err_ignore = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_on_vec_items = "allow"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
mem_forget = "warn"
min_ident_chars = "allow"
mismatching_type_param_order = "warn"
missing_assert_message = "allow"
missing_asserts_for_indexing = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
missing_trait_methods = "allow"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
module_name_repetitions = "allow"
modulo_arithmetic = "allow"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
must_use_candidate = "allow"
mut_mut = "warn"
mutex_atomic = "warn"
naive_bytecount = "allow"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
no_effect_underscore_binding = "warn"
no_mangle_with_rust_abi = "warn"
non_ascii_literal = "allow"
non_zero_suggestions = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
panic = "allow"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "allow"
print_stderr = "allow"
print_stdout = "allow"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_use = "warn"
pub_with_shorthand = "allow"
pub_without_shorthand = "warn"
question_mark_used = "allow"
range_minus_one = "warn"
range_plus_one = "allow"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
semicolon_outside_block = "warn"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
should_panic_without_expect = "warn"
similar_names = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
single_char_pattern = "warn"
single_match_else = "warn"
stable_sort_primitive = "warn"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_split_at_newline = "warn"
str_to_string = "allow"
string_add = "warn"
string_add_assign = "warn"
string_lit_chars_any = "warn"
string_slice = "allow"
string_to_string = "allow"
struct_excessive_bools = "warn"
struct_field_names = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "allow"
todo = "warn"
too_many_lines = "warn"
transmute_ptr_to_ptr = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
unchecked_duration_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreachable = "allow"
unreadable_literal = "allow"
unsafe_derive_deserialize = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "warn"
unwrap_in_result = "allow"
unwrap_used = "allow"
use_debug = "warn"
used_underscore_binding = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "allow"
wildcard_imports = "allow"
zero_sized_map_values = "warn"
